syntax = "proto3";

package com.akrillis.k8storage;

option go_package = "github.com/akrillis/k8storage/pkg/grpc/backend";

service Backend {
    rpc GetFile(GetRequest) returns (GetResponse) {}
}

message GetRequest {
    string client_id = 1;
    string name = 2;
}

message GetResponse {
    bytes data = 1;
}

